--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,10 @@ body .bg-img {
   background-repeat: no-repeat;
   background-position: center;
   padding-bottom: 100px;
-  background-image: url("../images/banner2.jpg");
-  /* background-size: cover;
-  background-position: center; */
-  height: 80vh;
+  /* background-image: url("../images/banner2.jpg"); */
+  background-size: cover;
+  background-position: center;
+ 
 }
 
 body nav {
