--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body .bg-img {
   background-repeat: no-repeat;
   background-position: center;
   padding-bottom: 100px;
-  /* background-image: url("../images/banner2.jpg"); */
+  background-image: url("../images/banner2.jpg");
   background-size: cover;
   background-position: center;
  
